Fix: send the suspects personality to the AI.

--- a/templates/the_end.html
+++ b/templates/the_end.html
@@ -68,6 +68,7 @@
                             <div class="card-body pt-0">
                                 <h5 class="card-title">{{ suspect.name }}</h5>
                                 <p class="card-text text-start">{{ suspect.description }}</p>
+                                <p class="card-text text-start">{{ suspect.personality }}</p>
                             </div>
                         </div>
                     </div>
